testdata/result/expr/!bad_typed_struct.sql.txt
--- !bad_typed_struct.sql
STRUCT<1>(2 +)

--- Error
syntax error: testdata/input/expr/!bad_typed_struct.sql:1:8: expected token: <ident>, ARRAY, STRUCT, but: <int>

  1:  STRUCT<1>(2 +)
             ^


syntax error: testdata/input/expr/!bad_typed_struct.sql:1:14: unexpected token: )

  1:  STRUCT<1>(2 +)
                   ^


--- AST
&ast.TypedStructLiteral{
  Rparen: 13,
  Fields: []*ast.StructField{
    &ast.StructField{
      Type: &ast.BadType{
        BadNode: &ast.BadNode{
          NodePos: 7,
          NodeEnd: 8,
          Tokens:  []*token.Token{
            &token.Token{
              Kind: "<int>",
              Raw:  "1",
              Base: 10,
              Pos:  7,
              End:  8,
            },
          },
        },
      },
    },
  },
  Values: []ast.Expr{
    &ast.BadExpr{
      BadNode: &ast.BadNode{
        NodePos: 10,
        NodeEnd: 13,
        Tokens:  []*token.Token{
          &token.Token{
            Kind: "<int>",
            Raw:  "2",
            Base: 10,
            Pos:  10,
            End:  11,
          },
          &token.Token{
            Kind:  "+",
            Space: " ",
            Raw:   "+",
            Pos:   12,
            End:   13,
          },
        },
      },
    },
  },
}

--- SQL
STRUCT<1>(2 +)
